name:                warp-tls-test
version:             0.1.0.0
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable warp-tls-test
  main-is: server.hs
  build-depends:
      base >=4.6 && < 4.8
    , warp-tls
    , warp
    , wai
    , http-types
  hs-source-dirs:      .
  default-language:    Haskell2010
